Added menu component

--- a/html-css/index.html
+++ b/html-css/index.html
@@ -3,13 +3,25 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>My HTML/CSS playground</title>
-
+  <meta charset="UTF-8">
+  <title>My HTML/CSS playground</title>
+  <link rel="stylesheet" type="text/css" href="node_modules/normalize.css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="src/css/style.css">
 </head>
 
 <body>
-    <div id="container" class=""></div>
+  <div id="contentContainer" class="container">
+    <div class="menu-container">
+      <div class="center-hor">
+        <span class="menu-item">File</span>
+      </div>
+      <div class="menu-body-toggle">
+        <p>Item 1</p>
+        <p>Item 2</p>
+        <p>Item 3</p>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
